exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is not read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flex": "1 0 auto",
      "flexFlow": "column wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      fullWidth={false}
      hintText="Snippet Name"
      id="titleField"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      style={
        Object {
          "flex": "1 1 auto",
        }
      }
      type="text"
      underlineShow={true}
      value="" />
    <AuthorAvatarIcon
      author=""
      avatarUrl="" />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <LanguageSelector
      disabled={false}
      language="python"
      onChange={[Function]}
      style={
        Object {
          "flex": "1 1 auto",
        }
      } />
    <div
      style={
        Object {
          "display": "inline-flex",
        }
      }>
      <LockButton
        onClick={[Function]}
        readOnly={false}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <SaveMenu
        canSave={true}
        enabled={true}
        id="saveMenu"
        onOrgChanged={[Function]}
        onSaveAsClick={[Function]}
        onSaveClick={[Function]}
        orgs={
          Array [
            "galactic-federation",
          ]
        }
        selectedOrg="galactic-federation"
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <DeleteButton
        isEnabled={true}
        onClick={[Function]}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <EditorMenu
        codeMirrorTheme="codesplain" />
    </div>
  </div>
</div>
`;

exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flex": "1 0 auto",
      "flexFlow": "column wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      fullWidth={false}
      hintText="Snippet Name"
      id="titleField"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      style={
        Object {
          "flex": "1 1 auto",
        }
      }
      type="text"
      underlineShow={true}
      value="" />
    <AuthorAvatarIcon
      author=""
      avatarUrl="" />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <LanguageSelector
      disabled={true}
      language="python"
      onChange={[Function]}
      style={
        Object {
          "flex": "1 1 auto",
        }
      } />
    <div
      style={
        Object {
          "display": "inline-flex",
        }
      }>
      <LockButton
        onClick={[Function]}
        readOnly={true}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <SaveMenu
        canSave={true}
        enabled={true}
        id="saveMenu"
        onOrgChanged={[Function]}
        onSaveAsClick={[Function]}
        onSaveClick={[Function]}
        orgs={
          Array [
            "galactic-federation",
          ]
        }
        selectedOrg="galactic-federation"
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <DeleteButton
        isEnabled={true}
        onClick={[Function]}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <EditorMenu
        codeMirrorTheme="codesplain" />
    </div>
  </div>
</div>
`;
